tests/outref/TERR017.ref

-- TERR017 : OCTO482 : Test of "Missing FROM-clause entry" error

SELECT (SELECT * FROM (SELECT n1.id FROM names n1 WHERE n1.id = n2.id) n2);

SELECT (SELECT * FROM (SELECT * FROM (SELECT * FROM (SELECT DISTINCT n1.id FROM names n1 WHERE n4.id = n5.id) n2) n3) n4) FROM names n5;
SELECT (SELECT * FROM (SELECT * FROM (SELECT * FROM (SELECT DISTINCT n1.id FROM names n1 WHERE n3.id = n5.id) n2) n3) n4) FROM names n5;
SELECT (SELECT * FROM (SELECT * FROM (SELECT * FROM (SELECT DISTINCT n1.id FROM names n1 WHERE n2.id = n5.id) n2) n3) n4) FROM names n5;
SELECT (SELECT * FROM (SELECT * FROM (SELECT * FROM (SELECT DISTINCT n1.id FROM names n1 WHERE n3.id = n4.id) n2) n3) n4) FROM names n5;
SELECT (SELECT * FROM (SELECT * FROM (SELECT * FROM (SELECT DISTINCT n1.id FROM names n1 WHERE n2.id = n4.id) n2) n3) n4) FROM names n5;
SELECT (SELECT * FROM (SELECT * FROM (SELECT * FROM (SELECT DISTINCT n1.id FROM names n1 WHERE n1.id = n4.id) n2) n3) n4) FROM names n5;
SELECT (SELECT * FROM (SELECT * FROM (SELECT * FROM (SELECT DISTINCT n1.id FROM names n1 WHERE n2.id = n3.id) n2) n3) n4) FROM names n5;
SELECT (SELECT * FROM (SELECT * FROM (SELECT * FROM (SELECT DISTINCT n1.id FROM names n1 WHERE n1.id = n3.id) n2) n3) n4) FROM names n5;
SELECT (SELECT * FROM (SELECT * FROM (SELECT * FROM (SELECT DISTINCT n1.id FROM names n1 WHERE n1.id = n2.id) n2) n3) n4) FROM names n5;

SELECT * FROM names n1, (SELECT n1.id,n1.firstname,n1.lastname FROM names) n2;
SELECT * FROM names n1, (SELECT * FROM n1) n2;
SELECT * FROM (SELECT n2.id) n1, names n2;
SELECT * FROM names n1, (SELECT n1.id) n2;

SELECT * FROM (SELECT * FROM names n1, (SELECT n1.id,n1.firstname,n1.lastname FROM names) n2) n3;
SELECT * FROM (SELECT * FROM names n1, (SELECT * FROM n1) n2) n3;
SELECT * FROM (SELECT * FROM (SELECT n2.id) n1, names n2) n3;
SELECT * FROM (SELECT * FROM names n1, (SELECT n1.id) n2) n3;

SELECT * FROM names n0, (SELECT * FROM names n1, (SELECT n0.id) n2) n3;
SELECT (SELECT * FROM names n0, (SELECT * FROM names n1, (SELECT n0.id) n2) n3);

SELECT (SELECT n1.id FROM names n1, (SELECT n1.id) n2);
SELECT (SELECT n1.firstname FROM names n1, (SELECT n1.id) n2);
SELECT (SELECT n2.id FROM names n1, (SELECT n1.id) n2);

SELECT * FROM customers c, (SELECT c.customer_id) c2;
SELECT * FROM customers c inner join (SELECT c.customer_id) c2 ON c2.customer_id = c.customer_id;

SELECT * FROM (SELECT n3.id) n3;

[ERROR] PATH:LINENUM DATE TIME : Missing FROM-clause entry for table : N2
Error with syntax near (line 1, column 65):

SELECT (SELECT * FROM (SELECT n1.id FROM names n1 WHERE n1.id = n2.id) n2);
                                                                ^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT (SELECT * FROM (SELECT n1.id FROM names n1 WHERE n1.id = n2.id) n2);
[ERROR] PATH:LINENUM DATE TIME : Missing FROM-clause entry for table : N4
Error with syntax near (line 1, column 96):

SELECT (SELECT * FROM (SELECT * FROM (SELECT * FROM (SELECT DISTINCT n1.id FROM names n1 WHERE n4.id = n5.id) n2) n3) n4) FROM names n5;
                                                                                               ^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT (SELECT * FROM (SELECT * FROM (SELECT * FROM (SELECT DISTINCT n1.id FROM names n1 WHERE n4.id = n5.id) n2) n3) n4) FROM names n5;
[ERROR] PATH:LINENUM DATE TIME : Missing FROM-clause entry for table : N3
Error with syntax near (line 1, column 96):

SELECT (SELECT * FROM (SELECT * FROM (SELECT * FROM (SELECT DISTINCT n1.id FROM names n1 WHERE n3.id = n5.id) n2) n3) n4) FROM names n5;
                                                                                               ^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT (SELECT * FROM (SELECT * FROM (SELECT * FROM (SELECT DISTINCT n1.id FROM names n1 WHERE n3.id = n5.id) n2) n3) n4) FROM names n5;
[ERROR] PATH:LINENUM DATE TIME : Missing FROM-clause entry for table : N2
Error with syntax near (line 1, column 96):

SELECT (SELECT * FROM (SELECT * FROM (SELECT * FROM (SELECT DISTINCT n1.id FROM names n1 WHERE n2.id = n5.id) n2) n3) n4) FROM names n5;
                                                                                               ^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT (SELECT * FROM (SELECT * FROM (SELECT * FROM (SELECT DISTINCT n1.id FROM names n1 WHERE n2.id = n5.id) n2) n3) n4) FROM names n5;
[ERROR] PATH:LINENUM DATE TIME : Missing FROM-clause entry for table : N3
Error with syntax near (line 1, column 96):

SELECT (SELECT * FROM (SELECT * FROM (SELECT * FROM (SELECT DISTINCT n1.id FROM names n1 WHERE n3.id = n4.id) n2) n3) n4) FROM names n5;
                                                                                               ^^^^^
[ERROR] PATH:LINENUM DATE TIME : Missing FROM-clause entry for table : N4
Error with syntax near (line 1, column 104):

SELECT (SELECT * FROM (SELECT * FROM (SELECT * FROM (SELECT DISTINCT n1.id FROM names n1 WHERE n3.id = n4.id) n2) n3) n4) FROM names n5;
                                                                                                       ^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT (SELECT * FROM (SELECT * FROM (SELECT * FROM (SELECT DISTINCT n1.id FROM names n1 WHERE n3.id = n4.id) n2) n3) n4) FROM names n5;
[ERROR] PATH:LINENUM DATE TIME : Missing FROM-clause entry for table : N2
Error with syntax near (line 1, column 96):

SELECT (SELECT * FROM (SELECT * FROM (SELECT * FROM (SELECT DISTINCT n1.id FROM names n1 WHERE n2.id = n4.id) n2) n3) n4) FROM names n5;
                                                                                               ^^^^^
[ERROR] PATH:LINENUM DATE TIME : Missing FROM-clause entry for table : N4
Error with syntax near (line 1, column 104):

SELECT (SELECT * FROM (SELECT * FROM (SELECT * FROM (SELECT DISTINCT n1.id FROM names n1 WHERE n2.id = n4.id) n2) n3) n4) FROM names n5;
                                                                                                       ^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT (SELECT * FROM (SELECT * FROM (SELECT * FROM (SELECT DISTINCT n1.id FROM names n1 WHERE n2.id = n4.id) n2) n3) n4) FROM names n5;
[ERROR] PATH:LINENUM DATE TIME : Missing FROM-clause entry for table : N4
Error with syntax near (line 1, column 104):

SELECT (SELECT * FROM (SELECT * FROM (SELECT * FROM (SELECT DISTINCT n1.id FROM names n1 WHERE n1.id = n4.id) n2) n3) n4) FROM names n5;
                                                                                                       ^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT (SELECT * FROM (SELECT * FROM (SELECT * FROM (SELECT DISTINCT n1.id FROM names n1 WHERE n1.id = n4.id) n2) n3) n4) FROM names n5;
[ERROR] PATH:LINENUM DATE TIME : Missing FROM-clause entry for table : N2
Error with syntax near (line 1, column 96):

SELECT (SELECT * FROM (SELECT * FROM (SELECT * FROM (SELECT DISTINCT n1.id FROM names n1 WHERE n2.id = n3.id) n2) n3) n4) FROM names n5;
                                                                                               ^^^^^
[ERROR] PATH:LINENUM DATE TIME : Missing FROM-clause entry for table : N3
Error with syntax near (line 1, column 104):

SELECT (SELECT * FROM (SELECT * FROM (SELECT * FROM (SELECT DISTINCT n1.id FROM names n1 WHERE n2.id = n3.id) n2) n3) n4) FROM names n5;
                                                                                                       ^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT (SELECT * FROM (SELECT * FROM (SELECT * FROM (SELECT DISTINCT n1.id FROM names n1 WHERE n2.id = n3.id) n2) n3) n4) FROM names n5;
[ERROR] PATH:LINENUM DATE TIME : Missing FROM-clause entry for table : N3
Error with syntax near (line 1, column 104):

SELECT (SELECT * FROM (SELECT * FROM (SELECT * FROM (SELECT DISTINCT n1.id FROM names n1 WHERE n1.id = n3.id) n2) n3) n4) FROM names n5;
                                                                                                       ^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT (SELECT * FROM (SELECT * FROM (SELECT * FROM (SELECT DISTINCT n1.id FROM names n1 WHERE n1.id = n3.id) n2) n3) n4) FROM names n5;
[ERROR] PATH:LINENUM DATE TIME : Missing FROM-clause entry for table : N2
Error with syntax near (line 1, column 104):

SELECT (SELECT * FROM (SELECT * FROM (SELECT * FROM (SELECT DISTINCT n1.id FROM names n1 WHERE n1.id = n2.id) n2) n3) n4) FROM names n5;
                                                                                                       ^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT (SELECT * FROM (SELECT * FROM (SELECT * FROM (SELECT DISTINCT n1.id FROM names n1 WHERE n1.id = n2.id) n2) n3) n4) FROM names n5;
[ERROR] PATH:LINENUM DATE TIME : Missing FROM-clause entry for table : N1
Error with syntax near (line 1, column 33):

SELECT * FROM names n1, (SELECT n1.id,n1.firstname,n1.lastname FROM names) n2;
                                ^^^^^
[ERROR] PATH:LINENUM DATE TIME : Missing FROM-clause entry for table : N1
Error with syntax near (line 1, column 39):

SELECT * FROM names n1, (SELECT n1.id,n1.firstname,n1.lastname FROM names) n2;
                                      ^^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : Missing FROM-clause entry for table : N1
Error with syntax near (line 1, column 52):

SELECT * FROM names n1, (SELECT n1.id,n1.firstname,n1.lastname FROM names) n2;
                                                   ^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT * FROM names n1, (SELECT n1.id,n1.firstname,n1.lastname FROM names) n2;
[ERROR] PATH:LINENUM DATE TIME : Unknown table: N1
Error with syntax near (line 1, column 40):

SELECT * FROM names n1, (SELECT * FROM n1) n2;
                                       ^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT * FROM names n1, (SELECT * FROM n1) n2;
[ERROR] PATH:LINENUM DATE TIME : Missing FROM-clause entry for table : N2
Error with syntax near (line 1, column 23):

SELECT * FROM (SELECT n2.id) n1, names n2;
                      ^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT * FROM (SELECT n2.id) n1, names n2;
[ERROR] PATH:LINENUM DATE TIME : Missing FROM-clause entry for table : N1
Error with syntax near (line 1, column 33):

SELECT * FROM names n1, (SELECT n1.id) n2;
                                ^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT * FROM names n1, (SELECT n1.id) n2;
[ERROR] PATH:LINENUM DATE TIME : Missing FROM-clause entry for table : N1
Error with syntax near (line 1, column 48):

SELECT * FROM (SELECT * FROM names n1, (SELECT n1.id,n1.firstname,n1.lastname FROM names) n2) n3;
                                               ^^^^^
[ERROR] PATH:LINENUM DATE TIME : Missing FROM-clause entry for table : N1
Error with syntax near (line 1, column 54):

SELECT * FROM (SELECT * FROM names n1, (SELECT n1.id,n1.firstname,n1.lastname FROM names) n2) n3;
                                                     ^^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : Missing FROM-clause entry for table : N1
Error with syntax near (line 1, column 67):

SELECT * FROM (SELECT * FROM names n1, (SELECT n1.id,n1.firstname,n1.lastname FROM names) n2) n3;
                                                                  ^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT * FROM (SELECT * FROM names n1, (SELECT n1.id,n1.firstname,n1.lastname FROM names) n2) n3;
[ERROR] PATH:LINENUM DATE TIME : Unknown table: N1
Error with syntax near (line 1, column 55):

SELECT * FROM (SELECT * FROM names n1, (SELECT * FROM n1) n2) n3;
                                                      ^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT * FROM (SELECT * FROM names n1, (SELECT * FROM n1) n2) n3;
[ERROR] PATH:LINENUM DATE TIME : Missing FROM-clause entry for table : N2
Error with syntax near (line 1, column 38):

SELECT * FROM (SELECT * FROM (SELECT n2.id) n1, names n2) n3;
                                     ^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT * FROM (SELECT * FROM (SELECT n2.id) n1, names n2) n3;
[ERROR] PATH:LINENUM DATE TIME : Missing FROM-clause entry for table : N1
Error with syntax near (line 1, column 48):

SELECT * FROM (SELECT * FROM names n1, (SELECT n1.id) n2) n3;
                                               ^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT * FROM (SELECT * FROM names n1, (SELECT n1.id) n2) n3;
[ERROR] PATH:LINENUM DATE TIME : Missing FROM-clause entry for table : N0
Error with syntax near (line 1, column 58):

SELECT * FROM names n0, (SELECT * FROM names n1, (SELECT n0.id) n2) n3;
                                                         ^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT * FROM names n0, (SELECT * FROM names n1, (SELECT n0.id) n2) n3;
[ERROR] PATH:LINENUM DATE TIME : Missing FROM-clause entry for table : N0
Error with syntax near (line 1, column 66):

SELECT (SELECT * FROM names n0, (SELECT * FROM names n1, (SELECT n0.id) n2) n3);
                                                                 ^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT (SELECT * FROM names n0, (SELECT * FROM names n1, (SELECT n0.id) n2) n3);
[ERROR] PATH:LINENUM DATE TIME : Missing FROM-clause entry for table : N1
Error with syntax near (line 1, column 45):

SELECT (SELECT n1.id FROM names n1, (SELECT n1.id) n2);
                                            ^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT (SELECT n1.id FROM names n1, (SELECT n1.id) n2);
[ERROR] PATH:LINENUM DATE TIME : Missing FROM-clause entry for table : N1
Error with syntax near (line 1, column 52):

SELECT (SELECT n1.firstname FROM names n1, (SELECT n1.id) n2);
                                                   ^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT (SELECT n1.firstname FROM names n1, (SELECT n1.id) n2);
[ERROR] PATH:LINENUM DATE TIME : Missing FROM-clause entry for table : N1
Error with syntax near (line 1, column 45):

SELECT (SELECT n2.id FROM names n1, (SELECT n1.id) n2);
                                            ^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT (SELECT n2.id FROM names n1, (SELECT n1.id) n2);
[ERROR] PATH:LINENUM DATE TIME : Unknown table: CUSTOMERS
Error with syntax near (line 1, column 15):

SELECT * FROM customers c, (SELECT c.customer_id) c2;
              ^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT * FROM customers c, (SELECT c.customer_id) c2;
[ERROR] PATH:LINENUM DATE TIME : Unknown table: CUSTOMERS
Error with syntax near (line 1, column 15):

SELECT * FROM customers c inner join (SELECT c.customer_id) c2 ON c2.customer_id = c.customer_id;
              ^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT * FROM customers c inner join (SELECT c.customer_id) c2 ON c2.customer_id = c.customer_id;
[ERROR] PATH:LINENUM DATE TIME : Missing FROM-clause entry for table : N3
Error with syntax near (line 1, column 23):

SELECT * FROM (SELECT n3.id) n3;
                      ^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT * FROM (SELECT n3.id) n3;

